// ============================================
// Mentory Prisma Schema
// ============================================
// Based on ER diagram: /product/er.puml
// Run migrations: pnpm prisma migrate dev

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ============================================
// Enums
// ============================================

enum UserRole {
  mentee
  mentor
  both
  admin
}

enum SlotStatus {
  free
  held
  booked
}

enum SessionStatus {
  requested
  booked
  paid
  canceled
  completed
  no_show
}

enum PaymentStatus {
  pending
  succeeded
  paid
  failed
  refunded
}

enum PayoutStatus {
  pending
  processing
  completed
  paid
  failed
}

enum NotificationType {
  session_requested
  session_confirmed
  session_canceled
  session_reminder
  session_booked
  payment_received
  payout_sent
  new_message
  new_review
}

// ============================================
// Users & Profiles
// ============================================

model User {
  id              String    @id @default(uuid()) @db.Uuid
  email           String    @unique
  username        String?   @unique
  passwordHash    String    @map("password_hash")
  fullName        String    @map("full_name")
  avatarUrl       String?   @map("avatar_url")
  timezone        String    @default("UTC")
  role            UserRole  @default(mentee)
  isBlocked       Boolean   @default(false) @map("is_blocked")
  blockedAt       DateTime? @map("blocked_at") @db.Timestamptz
  blockedReason   String?   @map("blocked_reason")
  isEmailVerified Boolean   @default(false) @map("is_email_verified")
  emailVerifiedAt DateTime? @map("email_verified_at") @db.Timestamptz
  failedLoginAttempts Int      @default(0) @map("failed_login_attempts")
  loginLockedUntil    DateTime? @map("login_locked_until") @db.Timestamptz
  lastLoginAt         DateTime? @map("last_login_at") @db.Timestamptz
  lastLoginIp         String?   @map("last_login_ip")
  createdAt       DateTime  @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  mentorProfile          MentorProfile?
  menteeProfile          MenteeProfile?
  mentorServices         MentorService[]
  availabilityRules      AvailabilityRule[]
  availabilityExceptions AvailabilityException[]
  slots                  Slot[]
  sessionsAsMentor       Session[]               @relation("MentorSessions")
  sessionsAsMentee       Session[]               @relation("MenteeSessions")
  payouts                Payout[]                @relation("MentorPayouts")
  paymentsAsMentor       Payment[]               @relation("MentorPayments")
  paymentsAsMentee       Payment[]               @relation("MenteePayments")
  sessionNotes           SessionNote[]
  reviewsGiven           Review[]                @relation("ReviewsByMentee")
  reviewsReceived        Review[]                @relation("ReviewsForMentor")
  conversationsAsMentor  Conversation[]          @relation("MentorConversations")
  conversationsAsMentee  Conversation[]          @relation("MenteeConversations")
  messages               Message[]
  notifications          Notification[]
  agreements             UserAgreement[]
  complaintsAuthored     Complaint[]             @relation("ComplaintAuthor")
  complaintsTargeted     Complaint[]             @relation("ComplaintTargetUser")
  complaintsAssigned     Complaint[]             @relation("ComplaintAssignedAdmin")
  complaintMessages      ComplaintMessage[]
  regaliaUploaded        MentorRegalia[]         @relation("RegaliaUploadedByMentor")
  regaliaReviewed        MentorRegalia[]         @relation("RegaliaReviewedByAdmin")
  moderationActions      ModerationAction[]      @relation("ModerationActionsByAdmin")
  userBlocksTarget       UserBlock[]             @relation("BlockedUser")
  userBlocksByAdmin      UserBlock[]             @relation("BlockedByAdmin")
  adminAuditLogs         AdminAuditLog[]         @relation("AdminAuditBy")
  platformWithdrawals    PlatformWithdrawal[]    @relation("PlatformWithdrawnBy")

  @@map("users")
}

model MentorProfile {
  userId          String   @id @map("user_id") @db.Uuid
  age             Int?
  education       String?
  workplace       String?
  goals           String[] @default([])
  hobbies         String[] @default([])
  certificates    String[] @default([])
  skills          String[] @default([])
  headline        String?
  bio             String?
  languages       String[] @default([])
  timezone        String   @default("UTC")
  verificationStatus String @default("unverified") @map("verification_status")
  isActive        Boolean  @default(false) @map("is_active")
  ratingAvg       Decimal  @default(0) @map("rating_avg") @db.Decimal(3, 2)
  ratingCount     Int      @default(0) @map("rating_count")
  stripeAccountId String?  @map("stripe_account_id")

  // Relations
  user   User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  topics MentorTopic[]

  @@map("mentor_profiles")
}

model MenteeProfile {
  userId       String   @id @map("user_id") @db.Uuid
  age          Int?
  education    String?
  workplace    String?
  background   String?
  goals        String[] @default([])
  hobbies      String[] @default([])
  certificates String[] @default([])
  skills       String[] @default([])
  interests    String[] @default([])

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("mentee_profiles")
}

// ============================================
// Topics & Mentor Topics
// ============================================

model Topic {
  id   String @id @default(uuid()) @db.Uuid
  name String @unique

  // Relations
  mentors MentorTopic[]

  @@map("topics")
}

model MentorTopic {
  mentorId String @map("mentor_id") @db.Uuid
  topicId  String @map("topic_id") @db.Uuid

  // Relations
  mentor MentorProfile @relation(fields: [mentorId], references: [userId], onDelete: Cascade)
  topic  Topic         @relation(fields: [topicId], references: [id], onDelete: Cascade)

  @@id([mentorId, topicId])
  @@index([topicId])
  @@map("mentor_topics")
}

// ============================================
// Services & Availability
// ============================================

model MentorService {
  id          String  @id @default(uuid()) @db.Uuid
  mentorId    String  @map("mentor_id") @db.Uuid
  title       String
  durationMin Int     @map("duration_min")
  priceAmount Decimal @map("price_amount") @db.Decimal(10, 2)
  currency    String  @default("USD") @db.VarChar(3)
  isActive    Boolean @default(true) @map("is_active")

  // Relations
  mentor   User      @relation(fields: [mentorId], references: [id], onDelete: Cascade)
  sessions Session[]

  @@index([mentorId])
  @@index([isActive])
  @@map("mentor_services")
}

model AvailabilityRule {
  id        String @id @default(uuid()) @db.Uuid
  mentorId  String @map("mentor_id") @db.Uuid
  weekday   Int    @db.SmallInt // 1 = Monday, 7 = Sunday
  startTime String @map("start_time") @db.VarChar(5) // HH:MM format
  endTime   String @map("end_time") @db.VarChar(5)
  timezone  String @default("UTC")

  // Relations
  mentor User @relation(fields: [mentorId], references: [id], onDelete: Cascade)

  @@index([mentorId])
  @@map("availability_rules")
}

model AvailabilityException {
  id          String   @id @default(uuid()) @db.Uuid
  mentorId    String   @map("mentor_id") @db.Uuid
  date        DateTime @db.Date
  isAvailable Boolean  @default(false) @map("is_available")
  note        String?

  // Relations
  mentor User @relation(fields: [mentorId], references: [id], onDelete: Cascade)

  @@unique([mentorId, date])
  @@index([mentorId])
  @@index([date])
  @@map("availability_exceptions")
}

// ============================================
// Slots & Sessions
// ============================================

model Slot {
  id        String     @id @default(uuid()) @db.Uuid
  mentorId  String     @map("mentor_id") @db.Uuid
  startAt   DateTime   @map("start_at") @db.Timestamptz
  endAt     DateTime   @map("end_at") @db.Timestamptz
  status    SlotStatus @default(free)
  heldUntil DateTime?  @map("held_until") @db.Timestamptz

  // Relations
  mentor  User     @relation(fields: [mentorId], references: [id], onDelete: Cascade)
  session Session?

  @@index([mentorId])
  @@index([startAt])
  @@index([status])
  @@index([mentorId, startAt, status])
  @@map("slots")
}

model Session {
  id           String        @id @default(uuid()) @db.Uuid
  mentorId     String        @map("mentor_id") @db.Uuid
  menteeId     String        @map("mentee_id") @db.Uuid
  serviceId    String        @map("service_id") @db.Uuid
  slotId       String        @unique @map("slot_id") @db.Uuid
  status       SessionStatus @default(requested)
  startAt      DateTime      @map("start_at") @db.Timestamptz
  endAt        DateTime      @map("end_at") @db.Timestamptz
  createdAt    DateTime      @default(now()) @map("created_at") @db.Timestamptz
  canceledAt   DateTime?     @map("canceled_at") @db.Timestamptz
  cancelReason String?       @map("cancel_reason")

  // Relations
  mentor       User          @relation("MentorSessions", fields: [mentorId], references: [id], onDelete: Restrict)
  mentee       User          @relation("MenteeSessions", fields: [menteeId], references: [id], onDelete: Restrict)
  service      MentorService @relation(fields: [serviceId], references: [id], onDelete: Restrict)
  slot         Slot          @relation(fields: [slotId], references: [id], onDelete: Restrict)
  payments     Payment[]
  videoRoom    VideoRoom?
  notes        SessionNote[]
  review       Review?
  conversation Conversation?
  complaints   Complaint[]

  @@index([mentorId])
  @@index([menteeId])
  @@index([status])
  @@index([startAt])
  @@index([mentorId, status])
  @@index([menteeId, status])
  @@map("sessions")
}

// ============================================
// Payments & Payouts
// ============================================

model Payment {
  id                String        @id @default(uuid()) @db.Uuid
  sessionId         String        @unique @map("session_id") @db.Uuid
  menteeId          String?       @map("mentee_id") @db.Uuid
  mentorId          String?       @map("mentor_id") @db.Uuid
  provider          String        @default("stripe")
  amount            Int // Amount in cents
  platformFee       Int?          @map("platform_fee")
  mentorAmount      Int?          @map("mentor_amount")
  currency          String        @db.VarChar(3)
  status            PaymentStatus @default(pending)
  providerPaymentId String?       @map("provider_payment_id")
  paidAt            DateTime?     @map("paid_at") @db.Timestamptz
  createdAt         DateTime      @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  session Session @relation(fields: [sessionId], references: [id], onDelete: Restrict)
  mentor  User?   @relation("MentorPayments", fields: [mentorId], references: [id], onDelete: SetNull)
  mentee  User?   @relation("MenteePayments", fields: [menteeId], references: [id], onDelete: SetNull)

  @@index([sessionId])
  @@index([mentorId])
  @@index([menteeId])
  @@index([status])
  @@map("payments")
}

model Payout {
  id        String       @id @default(uuid()) @db.Uuid
  mentorId  String       @map("mentor_id") @db.Uuid
  amount    Decimal      @db.Decimal(10, 2)
  currency  String       @db.VarChar(3)
  status    PayoutStatus @default(pending)
  provider  String       @default("stripe")
  createdAt DateTime     @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  mentor User @relation("MentorPayouts", fields: [mentorId], references: [id], onDelete: Restrict)

  @@index([mentorId])
  @@index([status])
  @@map("payouts")
}

// ============================================
// Video & Notes
// ============================================

model VideoRoom {
  id            String   @id @default(uuid()) @db.Uuid
  sessionId     String   @unique @map("session_id") @db.Uuid
  provider      String   @default("daily")
  roomId        String   @map("room_id")
  joinUrlMentee String?  @map("join_url_mentee")
  joinUrlMentor String?  @map("join_url_mentor")
  recordingUrl  String?  @map("recording_url")
  createdAt     DateTime @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@map("video_rooms")
}

model SessionNote {
  id            String   @id @default(uuid()) @db.Uuid
  sessionId     String   @map("session_id") @db.Uuid
  mentorId      String   @map("mentor_id") @db.Uuid
  privateNotes  String?  @map("private_notes")
  sharedSummary String?  @map("shared_summary")
  updatedAt     DateTime @updatedAt @map("updated_at") @db.Timestamptz

  // Relations
  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  mentor  User    @relation(fields: [mentorId], references: [id], onDelete: Cascade)

  @@unique([sessionId, mentorId])
  @@index([sessionId])
  @@map("session_notes")
}

// ============================================
// Chat
// ============================================

model Conversation {
  id             String    @id @default(uuid()) @db.Uuid
  mentorId       String    @map("mentor_id") @db.Uuid
  menteeId       String    @map("mentee_id") @db.Uuid
  sessionId      String?   @unique @map("session_id") @db.Uuid
  lastReadMentor DateTime? @map("last_read_mentor") @db.Timestamptz
  lastReadMentee DateTime? @map("last_read_mentee") @db.Timestamptz
  createdAt      DateTime  @default(now()) @map("created_at") @db.Timestamptz
  updatedAt      DateTime  @updatedAt @map("updated_at") @db.Timestamptz

  // Relations
  mentor   User      @relation("MentorConversations", fields: [mentorId], references: [id], onDelete: Cascade)
  mentee   User      @relation("MenteeConversations", fields: [menteeId], references: [id], onDelete: Cascade)
  session  Session?  @relation(fields: [sessionId], references: [id], onDelete: SetNull)
  messages Message[]

  @@unique([mentorId, menteeId])
  @@index([mentorId])
  @@index([menteeId])
  @@map("conversations")
}

model Message {
  id             String    @id @default(uuid()) @db.Uuid
  conversationId String    @map("conversation_id") @db.Uuid
  senderId       String    @map("sender_id") @db.Uuid
  content        String
  contentType    String    @default("text") @map("content_type")
  isRead         Boolean   @default(false) @map("is_read")
  createdAt      DateTime  @default(now()) @map("created_at") @db.Timestamptz
  readAt         DateTime? @map("read_at") @db.Timestamptz

  // Relations
  conversation Conversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)
  sender       User         @relation(fields: [senderId], references: [id], onDelete: Cascade)
  attachments  Attachment[]

  @@index([conversationId])
  @@index([senderId])
  @@index([createdAt])
  @@map("messages")
}

model Attachment {
  id        String @id @default(uuid()) @db.Uuid
  messageId String @map("message_id") @db.Uuid
  filename  String
  url       String
  mimeType  String @map("mime_type")
  sizeBytes BigInt @map("size_bytes")

  // Relations
  message Message @relation(fields: [messageId], references: [id], onDelete: Cascade)

  @@index([messageId])
  @@map("attachments")
}

// ============================================
// Reviews & Notifications
// ============================================

model Review {
  id        String   @id @default(uuid()) @db.Uuid
  sessionId String   @unique @map("session_id") @db.Uuid
  menteeId  String   @map("mentee_id") @db.Uuid
  mentorId  String   @map("mentor_id") @db.Uuid
  rating    Int      @db.SmallInt // 1-5
  text      String?
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  session Session @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  mentee  User    @relation("ReviewsByMentee", fields: [menteeId], references: [id], onDelete: Cascade)
  mentor  User    @relation("ReviewsForMentor", fields: [mentorId], references: [id], onDelete: Cascade)

  @@unique([menteeId, mentorId])
  @@index([mentorId])
  @@index([menteeId])
  @@index([rating])
  @@map("reviews")
}

model Notification {
  id          String           @id @default(uuid()) @db.Uuid
  userId      String           @map("user_id") @db.Uuid
  type        NotificationType
  title       String?
  body        String?
  isRead      Boolean          @default(false) @map("is_read")
  payloadJson Json?            @map("payload_json")
  createdAt   DateTime         @default(now()) @map("created_at") @db.Timestamptz
  readAt      DateTime?        @map("read_at") @db.Timestamptz

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([userId, readAt])
  @@index([createdAt])
  @@map("notifications")
}

model UserAgreement {
  id              String   @id @default(uuid()) @db.Uuid
  userId          String   @map("user_id") @db.Uuid
  documentType    String   @map("document_type")
  documentVersion String   @default("1.0") @map("document_version")
  acceptedAt      DateTime @default(now()) @map("accepted_at") @db.Timestamptz
  ipAddress       String?  @map("ip_address")

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([documentType])
  @@map("user_agreements")
}

model Complaint {
  id                String    @id @default(uuid()) @db.Uuid
  authorId          String    @map("author_id") @db.Uuid
  targetUserId      String?   @map("target_user_id") @db.Uuid
  targetSessionId   String?   @map("target_session_id") @db.Uuid
  assignedAdminId   String?   @map("assigned_admin_id") @db.Uuid
  category          String
  occurredAt        DateTime? @map("occurred_at") @db.Timestamptz
  description       String
  status            String    @default("new")
  resolutionComment String?   @map("resolution_comment")
  createdAt         DateTime  @default(now()) @map("created_at") @db.Timestamptz
  closedAt          DateTime? @map("closed_at") @db.Timestamptz

  // Relations
  author        User               @relation("ComplaintAuthor", fields: [authorId], references: [id], onDelete: Cascade)
  targetUser    User?              @relation("ComplaintTargetUser", fields: [targetUserId], references: [id], onDelete: SetNull)
  targetSession Session?           @relation(fields: [targetSessionId], references: [id], onDelete: SetNull)
  assignedAdmin User?              @relation("ComplaintAssignedAdmin", fields: [assignedAdminId], references: [id], onDelete: SetNull)
  messages      ComplaintMessage[]
  attachments   ComplaintAttachment[]

  @@index([authorId])
  @@index([targetUserId])
  @@index([targetSessionId])
  @@index([assignedAdminId])
  @@index([status])
  @@map("complaints")
}

model ComplaintMessage {
  id          String   @id @default(uuid()) @db.Uuid
  complaintId String   @map("complaint_id") @db.Uuid
  senderId    String   @map("sender_id") @db.Uuid
  body        String
  createdAt   DateTime @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  complaint Complaint @relation(fields: [complaintId], references: [id], onDelete: Cascade)
  sender    User      @relation(fields: [senderId], references: [id], onDelete: Cascade)

  @@index([complaintId, createdAt])
  @@index([senderId])
  @@map("complaint_messages")
}

model ComplaintAttachment {
  id          String   @id @default(uuid()) @db.Uuid
  complaintId String   @map("complaint_id") @db.Uuid
  fileName    String   @map("file_name")
  fileUrl     String   @map("file_url")
  mimeType    String   @map("mime_type")
  sizeBytes   BigInt   @map("size_bytes")
  createdAt   DateTime @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  complaint Complaint @relation(fields: [complaintId], references: [id], onDelete: Cascade)

  @@index([complaintId])
  @@map("complaint_attachments")
}

model MentorRegalia {
  id              String    @id @default(uuid()) @db.Uuid
  mentorId        String    @map("mentor_id") @db.Uuid
  fileUrl         String    @map("file_url")
  fileName        String    @map("file_name")
  mimeType        String?   @map("mime_type")
  sizeBytes       BigInt?   @map("size_bytes")
  status          String    @default("pending")
  rejectionReason String?   @map("rejection_reason")
  reviewedById    String?   @map("reviewed_by") @db.Uuid
  reviewedAt      DateTime? @map("reviewed_at") @db.Timestamptz
  createdAt       DateTime  @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  mentor     User  @relation("RegaliaUploadedByMentor", fields: [mentorId], references: [id], onDelete: Cascade)
  reviewedBy User? @relation("RegaliaReviewedByAdmin", fields: [reviewedById], references: [id], onDelete: SetNull)

  @@index([mentorId])
  @@index([status])
  @@index([reviewedById])
  @@map("mentor_regalia")
}

model ModerationAction {
  id         String   @id @default(uuid()) @db.Uuid
  adminId    String   @map("admin_id") @db.Uuid
  targetType String   @map("target_type")
  targetId   String   @map("target_id") @db.Uuid
  action     String
  reason     String?
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  admin User @relation("ModerationActionsByAdmin", fields: [adminId], references: [id], onDelete: Cascade)

  @@index([adminId, createdAt])
  @@index([targetType, targetId])
  @@map("moderation_actions")
}

model UserBlock {
  id        String   @id @default(uuid()) @db.Uuid
  userId    String   @map("user_id") @db.Uuid
  adminId   String   @map("admin_id") @db.Uuid
  status    String   @default("blocked")
  reason    String?
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  user  User @relation("BlockedUser", fields: [userId], references: [id], onDelete: Cascade)
  admin User @relation("BlockedByAdmin", fields: [adminId], references: [id], onDelete: Cascade)

  @@index([userId, createdAt])
  @@index([adminId, createdAt])
  @@map("user_blocks")
}

model AdminAuditLog {
  id          String   @id @default(uuid()) @db.Uuid
  adminId     String   @map("admin_id") @db.Uuid
  action      String
  targetType  String   @map("target_type")
  targetId    String?  @map("target_id") @db.Uuid
  payloadJson Json?    @map("payload_json")
  createdAt   DateTime @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  admin User @relation("AdminAuditBy", fields: [adminId], references: [id], onDelete: Cascade)

  @@index([adminId, createdAt])
  @@index([targetType, targetId])
  @@map("admin_audit_logs")
}

model PlatformWithdrawal {
  id        String   @id @default(uuid()) @db.Uuid
  adminId   String   @map("admin_id") @db.Uuid
  amount    Int
  currency  String   @db.VarChar(3)
  provider  String
  status    String   @default("pending")
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz

  // Relations
  admin User @relation("PlatformWithdrawnBy", fields: [adminId], references: [id], onDelete: Cascade)

  @@index([adminId, createdAt])
  @@map("platform_withdrawals")
}
