@startuml

skinparam linetype ortho


title Mentory ER (Admin/Trust MVP, Must Have)

entity "users" as users {
  * id : int <<PK>>
  --
  role : string
  status : string
  email : string
}

entity "sessions (ref)" as sessions_ref {
  * id : int <<PK>>
  --
  status : string
}

entity "mentor_regalia" as mentor_regalia {
  * id : int <<PK>>
  --
  mentor_id : int <<FK>>
  file_url : string
  status : string
  reviewed_by : int <<FK>>
  reviewed_at : timestamp
  created_at : timestamp
}

entity "complaints" as complaints {
  * id : int <<PK>>
  --
  author_id : int <<FK>>
  target_user_id : int <<FK>>
  target_session_id : int <<FK>>
  assigned_admin_id : int <<FK>>
  category : string
  status : string
  resolution_comment : text
  created_at : timestamp
  closed_at : timestamp
}

entity "complaint_messages" as complaint_messages {
  * id : int <<PK>>
  --
  complaint_id : int <<FK>>
  sender_id : int <<FK>>
  body : text
  created_at : timestamp
}

entity "moderation_actions" as moderation_actions {
  * id : int <<PK>>
  --
  admin_id : int <<FK>>
  target_type : string
  target_id : int
  action : string
  reason : text
  created_at : timestamp
}

entity "admin_audit_logs" as admin_audit_logs {
  * id : int <<PK>>
  --
  admin_id : int <<FK>>
  action : string
  target_type : string
  target_id : int
  created_at : timestamp
}

' Layout anchors
users -[hidden]down- mentor_regalia
mentor_regalia -[hidden]down- complaints
complaints -[hidden]down- moderation_actions
moderation_actions -[hidden]down- admin_audit_logs

' Relationships
users ||--o{ mentor_regalia : загружает
users ||--o{ mentor_regalia : проверяет

users ||--o{ complaints : создает
users ||--o{ complaints : цель
users ||--o{ complaints : назначен
sessions_ref ||--o{ complaints : связанная_сессия
complaints ||--o{ complaint_messages : ветка
users ||--o{ complaint_messages : пишет

users ||--o{ moderation_actions : выполняет
users ||--o{ admin_audit_logs : логирует

@enduml
